Proyecto_Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CIN
    COMDOB
    CORDER
    CORIZQ
    COUT
    ENDL
    GET
    INCLUDE
    MAYORDER
    MAYORIZQ
    MINUSMINUS
    NAMESPACE
    NUMERAL
    PARA
    PLUSPLUS
    RETURN
    STD
    USING
    VOID

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM LLAIZQ lista_decl lista_sent LLADER
Rule 2     lista_decl -> lista_decl decl
Rule 3     lista_decl -> decl
Rule 4     lista_decl -> empty
Rule 5     decl -> tipo lista_id PUNTOCOMA
Rule 6     tipo -> INT
Rule 7     tipo -> FLOAT
Rule 8     tipo -> BOOL
Rule 9     lista_id -> lista_id COMA IDENTIFICADOR
Rule 10    lista_id -> IDENTIFICADOR
Rule 11    lista_sent -> lista_sent sent
Rule 12    lista_sent -> sent
Rule 13    lista_sent -> empty
Rule 14    sent -> sent_if
Rule 15    sent -> sent_while
Rule 16    sent -> sent_do
Rule 17    sent -> sent_read
Rule 18    sent -> sent_write
Rule 19    sent -> bloque
Rule 20    sent -> sent_assign
Rule 21    sent -> BREAK PUNTOCOMA
Rule 22    sent_if -> SI PARIZQ exp_bool PARDER bloque SINO bloque
Rule 23    sent_if -> SI PARIZQ exp_bool PARDER bloque
Rule 24    sent_while -> MIENTRAS PARIZQ exp_bool PARDER bloque
Rule 25    sent_do -> DO bloque MIENTRAS PARIZQ exp_bool PARDER PUNTOCOMA
Rule 26    sent_read -> READ PARIZQ IDENTIFICADOR PARDER PUNTOCOMA
Rule 27    sent_write -> WRITE PARIZQ exp PARDER PUNTOCOMA
Rule 28    bloque -> LLAIZQ lista_sent LLADER
Rule 29    sent_assign -> IDENTIFICADOR ASIGNAR exp PUNTOCOMA
Rule 30    exp_bool -> exp_bool OR exp_bool
Rule 31    exp_bool -> exp_bool AND exp_bool
Rule 32    exp_bool -> NOT exp_bool
Rule 33    exp_bool -> exp_rel
Rule 34    exp_rel -> exp MENORQUE exp
Rule 35    exp_rel -> exp MAYORQUE exp
Rule 36    exp_rel -> exp MENORIGUAL exp
Rule 37    exp_rel -> exp MAYORIGUAL exp
Rule 38    exp_rel -> exp IGUAL exp
Rule 39    exp_rel -> exp DISTINTO exp
Rule 40    exp -> exp SUMA exp
Rule 41    exp -> exp RESTA exp
Rule 42    exp -> exp MULT exp
Rule 43    exp -> exp DIV exp
Rule 44    exp -> exp POTENCIA exp
Rule 45    exp -> exp MODULO exp
Rule 46    exp -> factor
Rule 47    factor -> ENTERO
Rule 48    factor -> IDENTIFICADOR
Rule 49    factor -> CADENA
Rule 50    factor -> PARIZQ exp PARDER
Rule 51    empty -> <empty>

Terminals, with rules where they appear

AND                  : 31
ASIGNAR              : 29
BOOL                 : 8
BREAK                : 21
CADENA               : 49
CIN                  : 
COMA                 : 9
COMDOB               : 
CORDER               : 
CORIZQ               : 
COUT                 : 
DISTINTO             : 39
DIV                  : 43
DO                   : 25
ENDL                 : 
ENTERO               : 47
FLOAT                : 7
GET                  : 
IDENTIFICADOR        : 9 10 26 29 48
IGUAL                : 38
INCLUDE              : 
INT                  : 6
LLADER               : 1 28
LLAIZQ               : 1 28
MAYORDER             : 
MAYORIGUAL           : 37
MAYORIZQ             : 
MAYORQUE             : 35
MENORIGUAL           : 36
MENORQUE             : 34
MIENTRAS             : 24 25
MINUSMINUS           : 
MODULO               : 45
MULT                 : 42
NAMESPACE            : 
NOT                  : 32
NUMERAL              : 
OR                   : 30
PARA                 : 
PARDER               : 22 23 24 25 26 27 50
PARIZQ               : 22 23 24 25 26 27 50
PLUSPLUS             : 
POTENCIA             : 44
PROGRAM              : 1
PUNTOCOMA            : 5 21 25 26 27 29
READ                 : 26
RESTA                : 41
RETURN               : 
SI                   : 22 23
SINO                 : 22
STD                  : 
SUMA                 : 40
USING                : 
VOID                 : 
WRITE                : 27
error                : 

Nonterminals, with rules where they appear

bloque               : 19 22 22 23 24 25
decl                 : 2 3
empty                : 4 13
exp                  : 27 29 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 50
exp_bool             : 22 23 24 25 30 30 31 31 32
exp_rel              : 33
factor               : 46
lista_decl           : 1 2
lista_id             : 5 9
lista_sent           : 1 11 28
programa             : 0
sent                 : 11 12
sent_assign          : 20
sent_do              : 16
sent_if              : 14
sent_read            : 17
sent_while           : 15
sent_write           : 18
tipo                 : 5

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM LLAIZQ lista_decl lista_sent LLADER

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . LLAIZQ lista_decl lista_sent LLADER

    LLAIZQ          shift and go to state 3


state 3

    (1) programa -> PROGRAM LLAIZQ . lista_decl lista_sent LLADER
    (2) lista_decl -> . lista_decl decl
    (3) lista_decl -> . decl
    (4) lista_decl -> . empty
    (5) decl -> . tipo lista_id PUNTOCOMA
    (51) empty -> .
    (6) tipo -> . INT
    (7) tipo -> . FLOAT
    (8) tipo -> . BOOL

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    BREAK           reduce using rule 51 (empty -> .)
    SI              reduce using rule 51 (empty -> .)
    MIENTRAS        reduce using rule 51 (empty -> .)
    DO              reduce using rule 51 (empty -> .)
    READ            reduce using rule 51 (empty -> .)
    WRITE           reduce using rule 51 (empty -> .)
    LLAIZQ          reduce using rule 51 (empty -> .)
    IDENTIFICADOR   reduce using rule 51 (empty -> .)
    LLADER          reduce using rule 51 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10

  ! INT             [ reduce using rule 51 (empty -> .) ]
  ! FLOAT           [ reduce using rule 51 (empty -> .) ]
  ! BOOL            [ reduce using rule 51 (empty -> .) ]

    lista_decl                     shift and go to state 4
    decl                           shift and go to state 5
    empty                          shift and go to state 6
    tipo                           shift and go to state 7

state 4

    (1) programa -> PROGRAM LLAIZQ lista_decl . lista_sent LLADER
    (2) lista_decl -> lista_decl . decl
    (11) lista_sent -> . lista_sent sent
    (12) lista_sent -> . sent
    (13) lista_sent -> . empty
    (5) decl -> . tipo lista_id PUNTOCOMA
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK PUNTOCOMA
    (51) empty -> .
    (6) tipo -> . INT
    (7) tipo -> . FLOAT
    (8) tipo -> . BOOL
    (22) sent_if -> . SI PARIZQ exp_bool PARDER bloque SINO bloque
    (23) sent_if -> . SI PARIZQ exp_bool PARDER bloque
    (24) sent_while -> . MIENTRAS PARIZQ exp_bool PARDER bloque
    (25) sent_do -> . DO bloque MIENTRAS PARIZQ exp_bool PARDER PUNTOCOMA
    (26) sent_read -> . READ PARIZQ IDENTIFICADOR PARDER PUNTOCOMA
    (27) sent_write -> . WRITE PARIZQ exp PARDER PUNTOCOMA
    (28) bloque -> . LLAIZQ lista_sent LLADER
    (29) sent_assign -> . IDENTIFICADOR ASIGNAR exp PUNTOCOMA

  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for LLAIZQ resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
    BREAK           shift and go to state 23
    LLADER          reduce using rule 51 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    SI              shift and go to state 24
    MIENTRAS        shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LLAIZQ          shift and go to state 11
    IDENTIFICADOR   shift and go to state 28

  ! BREAK           [ reduce using rule 51 (empty -> .) ]
  ! SI              [ reduce using rule 51 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 51 (empty -> .) ]
  ! DO              [ reduce using rule 51 (empty -> .) ]
  ! READ            [ reduce using rule 51 (empty -> .) ]
  ! WRITE           [ reduce using rule 51 (empty -> .) ]
  ! LLAIZQ          [ reduce using rule 51 (empty -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 51 (empty -> .) ]

    lista_sent                     shift and go to state 12
    decl                           shift and go to state 13
    sent                           shift and go to state 14
    empty                          shift and go to state 15
    tipo                           shift and go to state 7
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 5

    (3) lista_decl -> decl .

    BREAK           reduce using rule 3 (lista_decl -> decl .)
    INT             reduce using rule 3 (lista_decl -> decl .)
    FLOAT           reduce using rule 3 (lista_decl -> decl .)
    BOOL            reduce using rule 3 (lista_decl -> decl .)
    SI              reduce using rule 3 (lista_decl -> decl .)
    MIENTRAS        reduce using rule 3 (lista_decl -> decl .)
    DO              reduce using rule 3 (lista_decl -> decl .)
    READ            reduce using rule 3 (lista_decl -> decl .)
    WRITE           reduce using rule 3 (lista_decl -> decl .)
    LLAIZQ          reduce using rule 3 (lista_decl -> decl .)
    IDENTIFICADOR   reduce using rule 3 (lista_decl -> decl .)
    LLADER          reduce using rule 3 (lista_decl -> decl .)


state 6

    (4) lista_decl -> empty .

    BREAK           reduce using rule 4 (lista_decl -> empty .)
    INT             reduce using rule 4 (lista_decl -> empty .)
    FLOAT           reduce using rule 4 (lista_decl -> empty .)
    BOOL            reduce using rule 4 (lista_decl -> empty .)
    SI              reduce using rule 4 (lista_decl -> empty .)
    MIENTRAS        reduce using rule 4 (lista_decl -> empty .)
    DO              reduce using rule 4 (lista_decl -> empty .)
    READ            reduce using rule 4 (lista_decl -> empty .)
    WRITE           reduce using rule 4 (lista_decl -> empty .)
    LLAIZQ          reduce using rule 4 (lista_decl -> empty .)
    IDENTIFICADOR   reduce using rule 4 (lista_decl -> empty .)
    LLADER          reduce using rule 4 (lista_decl -> empty .)


state 7

    (5) decl -> tipo . lista_id PUNTOCOMA
    (9) lista_id -> . lista_id COMA IDENTIFICADOR
    (10) lista_id -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 31

    lista_id                       shift and go to state 30

state 8

    (6) tipo -> INT .

    IDENTIFICADOR   reduce using rule 6 (tipo -> INT .)


state 9

    (7) tipo -> FLOAT .

    IDENTIFICADOR   reduce using rule 7 (tipo -> FLOAT .)


state 10

    (8) tipo -> BOOL .

    IDENTIFICADOR   reduce using rule 8 (tipo -> BOOL .)


state 11

    (28) bloque -> LLAIZQ . lista_sent LLADER
    (11) lista_sent -> . lista_sent sent
    (12) lista_sent -> . sent
    (13) lista_sent -> . empty
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK PUNTOCOMA
    (51) empty -> .
    (22) sent_if -> . SI PARIZQ exp_bool PARDER bloque SINO bloque
    (23) sent_if -> . SI PARIZQ exp_bool PARDER bloque
    (24) sent_while -> . MIENTRAS PARIZQ exp_bool PARDER bloque
    (25) sent_do -> . DO bloque MIENTRAS PARIZQ exp_bool PARDER PUNTOCOMA
    (26) sent_read -> . READ PARIZQ IDENTIFICADOR PARDER PUNTOCOMA
    (27) sent_write -> . WRITE PARIZQ exp PARDER PUNTOCOMA
    (28) bloque -> . LLAIZQ lista_sent LLADER
    (29) sent_assign -> . IDENTIFICADOR ASIGNAR exp PUNTOCOMA

  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for LLAIZQ resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
    BREAK           shift and go to state 23
    LLADER          reduce using rule 51 (empty -> .)
    SI              shift and go to state 24
    MIENTRAS        shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LLAIZQ          shift and go to state 11
    IDENTIFICADOR   shift and go to state 28

  ! BREAK           [ reduce using rule 51 (empty -> .) ]
  ! SI              [ reduce using rule 51 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 51 (empty -> .) ]
  ! DO              [ reduce using rule 51 (empty -> .) ]
  ! READ            [ reduce using rule 51 (empty -> .) ]
  ! WRITE           [ reduce using rule 51 (empty -> .) ]
  ! LLAIZQ          [ reduce using rule 51 (empty -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 51 (empty -> .) ]

    lista_sent                     shift and go to state 32
    sent                           shift and go to state 14
    empty                          shift and go to state 15
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 12

    (1) programa -> PROGRAM LLAIZQ lista_decl lista_sent . LLADER
    (11) lista_sent -> lista_sent . sent
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK PUNTOCOMA
    (22) sent_if -> . SI PARIZQ exp_bool PARDER bloque SINO bloque
    (23) sent_if -> . SI PARIZQ exp_bool PARDER bloque
    (24) sent_while -> . MIENTRAS PARIZQ exp_bool PARDER bloque
    (25) sent_do -> . DO bloque MIENTRAS PARIZQ exp_bool PARDER PUNTOCOMA
    (26) sent_read -> . READ PARIZQ IDENTIFICADOR PARDER PUNTOCOMA
    (27) sent_write -> . WRITE PARIZQ exp PARDER PUNTOCOMA
    (28) bloque -> . LLAIZQ lista_sent LLADER
    (29) sent_assign -> . IDENTIFICADOR ASIGNAR exp PUNTOCOMA

    LLADER          shift and go to state 33
    BREAK           shift and go to state 23
    SI              shift and go to state 24
    MIENTRAS        shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LLAIZQ          shift and go to state 11
    IDENTIFICADOR   shift and go to state 28

    sent                           shift and go to state 34
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 13

    (2) lista_decl -> lista_decl decl .

    BREAK           reduce using rule 2 (lista_decl -> lista_decl decl .)
    INT             reduce using rule 2 (lista_decl -> lista_decl decl .)
    FLOAT           reduce using rule 2 (lista_decl -> lista_decl decl .)
    BOOL            reduce using rule 2 (lista_decl -> lista_decl decl .)
    SI              reduce using rule 2 (lista_decl -> lista_decl decl .)
    MIENTRAS        reduce using rule 2 (lista_decl -> lista_decl decl .)
    DO              reduce using rule 2 (lista_decl -> lista_decl decl .)
    READ            reduce using rule 2 (lista_decl -> lista_decl decl .)
    WRITE           reduce using rule 2 (lista_decl -> lista_decl decl .)
    LLAIZQ          reduce using rule 2 (lista_decl -> lista_decl decl .)
    IDENTIFICADOR   reduce using rule 2 (lista_decl -> lista_decl decl .)
    LLADER          reduce using rule 2 (lista_decl -> lista_decl decl .)


state 14

    (12) lista_sent -> sent .

    LLADER          reduce using rule 12 (lista_sent -> sent .)
    BREAK           reduce using rule 12 (lista_sent -> sent .)
    SI              reduce using rule 12 (lista_sent -> sent .)
    MIENTRAS        reduce using rule 12 (lista_sent -> sent .)
    DO              reduce using rule 12 (lista_sent -> sent .)
    READ            reduce using rule 12 (lista_sent -> sent .)
    WRITE           reduce using rule 12 (lista_sent -> sent .)
    LLAIZQ          reduce using rule 12 (lista_sent -> sent .)
    IDENTIFICADOR   reduce using rule 12 (lista_sent -> sent .)


state 15

    (13) lista_sent -> empty .

    LLADER          reduce using rule 13 (lista_sent -> empty .)
    BREAK           reduce using rule 13 (lista_sent -> empty .)
    SI              reduce using rule 13 (lista_sent -> empty .)
    MIENTRAS        reduce using rule 13 (lista_sent -> empty .)
    DO              reduce using rule 13 (lista_sent -> empty .)
    READ            reduce using rule 13 (lista_sent -> empty .)
    WRITE           reduce using rule 13 (lista_sent -> empty .)
    LLAIZQ          reduce using rule 13 (lista_sent -> empty .)
    IDENTIFICADOR   reduce using rule 13 (lista_sent -> empty .)


state 16

    (14) sent -> sent_if .

    LLADER          reduce using rule 14 (sent -> sent_if .)
    BREAK           reduce using rule 14 (sent -> sent_if .)
    SI              reduce using rule 14 (sent -> sent_if .)
    MIENTRAS        reduce using rule 14 (sent -> sent_if .)
    DO              reduce using rule 14 (sent -> sent_if .)
    READ            reduce using rule 14 (sent -> sent_if .)
    WRITE           reduce using rule 14 (sent -> sent_if .)
    LLAIZQ          reduce using rule 14 (sent -> sent_if .)
    IDENTIFICADOR   reduce using rule 14 (sent -> sent_if .)


state 17

    (15) sent -> sent_while .

    LLADER          reduce using rule 15 (sent -> sent_while .)
    BREAK           reduce using rule 15 (sent -> sent_while .)
    SI              reduce using rule 15 (sent -> sent_while .)
    MIENTRAS        reduce using rule 15 (sent -> sent_while .)
    DO              reduce using rule 15 (sent -> sent_while .)
    READ            reduce using rule 15 (sent -> sent_while .)
    WRITE           reduce using rule 15 (sent -> sent_while .)
    LLAIZQ          reduce using rule 15 (sent -> sent_while .)
    IDENTIFICADOR   reduce using rule 15 (sent -> sent_while .)


state 18

    (16) sent -> sent_do .

    LLADER          reduce using rule 16 (sent -> sent_do .)
    BREAK           reduce using rule 16 (sent -> sent_do .)
    SI              reduce using rule 16 (sent -> sent_do .)
    MIENTRAS        reduce using rule 16 (sent -> sent_do .)
    DO              reduce using rule 16 (sent -> sent_do .)
    READ            reduce using rule 16 (sent -> sent_do .)
    WRITE           reduce using rule 16 (sent -> sent_do .)
    LLAIZQ          reduce using rule 16 (sent -> sent_do .)
    IDENTIFICADOR   reduce using rule 16 (sent -> sent_do .)


state 19

    (17) sent -> sent_read .

    LLADER          reduce using rule 17 (sent -> sent_read .)
    BREAK           reduce using rule 17 (sent -> sent_read .)
    SI              reduce using rule 17 (sent -> sent_read .)
    MIENTRAS        reduce using rule 17 (sent -> sent_read .)
    DO              reduce using rule 17 (sent -> sent_read .)
    READ            reduce using rule 17 (sent -> sent_read .)
    WRITE           reduce using rule 17 (sent -> sent_read .)
    LLAIZQ          reduce using rule 17 (sent -> sent_read .)
    IDENTIFICADOR   reduce using rule 17 (sent -> sent_read .)


state 20

    (18) sent -> sent_write .

    LLADER          reduce using rule 18 (sent -> sent_write .)
    BREAK           reduce using rule 18 (sent -> sent_write .)
    SI              reduce using rule 18 (sent -> sent_write .)
    MIENTRAS        reduce using rule 18 (sent -> sent_write .)
    DO              reduce using rule 18 (sent -> sent_write .)
    READ            reduce using rule 18 (sent -> sent_write .)
    WRITE           reduce using rule 18 (sent -> sent_write .)
    LLAIZQ          reduce using rule 18 (sent -> sent_write .)
    IDENTIFICADOR   reduce using rule 18 (sent -> sent_write .)


state 21

    (19) sent -> bloque .

    LLADER          reduce using rule 19 (sent -> bloque .)
    BREAK           reduce using rule 19 (sent -> bloque .)
    SI              reduce using rule 19 (sent -> bloque .)
    MIENTRAS        reduce using rule 19 (sent -> bloque .)
    DO              reduce using rule 19 (sent -> bloque .)
    READ            reduce using rule 19 (sent -> bloque .)
    WRITE           reduce using rule 19 (sent -> bloque .)
    LLAIZQ          reduce using rule 19 (sent -> bloque .)
    IDENTIFICADOR   reduce using rule 19 (sent -> bloque .)


state 22

    (20) sent -> sent_assign .

    LLADER          reduce using rule 20 (sent -> sent_assign .)
    BREAK           reduce using rule 20 (sent -> sent_assign .)
    SI              reduce using rule 20 (sent -> sent_assign .)
    MIENTRAS        reduce using rule 20 (sent -> sent_assign .)
    DO              reduce using rule 20 (sent -> sent_assign .)
    READ            reduce using rule 20 (sent -> sent_assign .)
    WRITE           reduce using rule 20 (sent -> sent_assign .)
    LLAIZQ          reduce using rule 20 (sent -> sent_assign .)
    IDENTIFICADOR   reduce using rule 20 (sent -> sent_assign .)


state 23

    (21) sent -> BREAK . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35


state 24

    (22) sent_if -> SI . PARIZQ exp_bool PARDER bloque SINO bloque
    (23) sent_if -> SI . PARIZQ exp_bool PARDER bloque

    PARIZQ          shift and go to state 36


state 25

    (24) sent_while -> MIENTRAS . PARIZQ exp_bool PARDER bloque

    PARIZQ          shift and go to state 37


state 26

    (25) sent_do -> DO . bloque MIENTRAS PARIZQ exp_bool PARDER PUNTOCOMA
    (28) bloque -> . LLAIZQ lista_sent LLADER

    LLAIZQ          shift and go to state 11

    bloque                         shift and go to state 38

state 27

    (26) sent_read -> READ . PARIZQ IDENTIFICADOR PARDER PUNTOCOMA

    PARIZQ          shift and go to state 39


state 28

    (29) sent_assign -> IDENTIFICADOR . ASIGNAR exp PUNTOCOMA

    ASIGNAR         shift and go to state 40


state 29

    (27) sent_write -> WRITE . PARIZQ exp PARDER PUNTOCOMA

    PARIZQ          shift and go to state 41


state 30

    (5) decl -> tipo lista_id . PUNTOCOMA
    (9) lista_id -> lista_id . COMA IDENTIFICADOR

    PUNTOCOMA       shift and go to state 42
    COMA            shift and go to state 43


state 31

    (10) lista_id -> IDENTIFICADOR .

    PUNTOCOMA       reduce using rule 10 (lista_id -> IDENTIFICADOR .)
    COMA            reduce using rule 10 (lista_id -> IDENTIFICADOR .)


state 32

    (28) bloque -> LLAIZQ lista_sent . LLADER
    (11) lista_sent -> lista_sent . sent
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK PUNTOCOMA
    (22) sent_if -> . SI PARIZQ exp_bool PARDER bloque SINO bloque
    (23) sent_if -> . SI PARIZQ exp_bool PARDER bloque
    (24) sent_while -> . MIENTRAS PARIZQ exp_bool PARDER bloque
    (25) sent_do -> . DO bloque MIENTRAS PARIZQ exp_bool PARDER PUNTOCOMA
    (26) sent_read -> . READ PARIZQ IDENTIFICADOR PARDER PUNTOCOMA
    (27) sent_write -> . WRITE PARIZQ exp PARDER PUNTOCOMA
    (28) bloque -> . LLAIZQ lista_sent LLADER
    (29) sent_assign -> . IDENTIFICADOR ASIGNAR exp PUNTOCOMA

    LLADER          shift and go to state 44
    BREAK           shift and go to state 23
    SI              shift and go to state 24
    MIENTRAS        shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LLAIZQ          shift and go to state 11
    IDENTIFICADOR   shift and go to state 28

    sent                           shift and go to state 34
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 33

    (1) programa -> PROGRAM LLAIZQ lista_decl lista_sent LLADER .

    $end            reduce using rule 1 (programa -> PROGRAM LLAIZQ lista_decl lista_sent LLADER .)


state 34

    (11) lista_sent -> lista_sent sent .
